- topmenu.rb: RD->RDoc
- bottompanelstate.rb: in ItemsExchangeBottomPanelState keys up and down
  are synonyms for left and right (to make it more natural when
  BottomPanel is placed vertically)
- game.rb: fixed mouse controls for BottomPanel in right position
- game.rb, gamestate.rb, bottompanel.rb, bpvikingview.rb: 
  F5 switches panel position in-game

[30.December 2008]
- viking.rb: Viking standing on the top of a ladder is able to climb it down.
- game.rb, bottompanel.rb, bpvikingview.rb, location.rb:
  variable placement of BottomPanel: not only at the bottom of window, but also
  at the top, on the left or on the right

[29.December 2008]
- bottompanel.rb, bpvikingview.rb: 
  cleaner way of determining where user clicked (done by VikingView, 
  not by BottomPanel);
  double-click on an item uses it
- transporter.rb, transportable.rb: commented-out debugging output
- location.rb: all objects get reference of Location
- entities/lock.rb: unlocked Lock deletes itself from the Location
- shielder.rb: Shield is informed about Olaf's transport, so it doesn't move
  with a delay

[[[release 0.7] [12/27/2008] ----------------------------------------

[27.December 2008]
- entities/present.rb: fixed error in 'present deletion hack'
- location.rb: modified comment to Location#talk=;
  fixed Location#exited? - it waits for a talk to be completed
- game.rb: commented-out two annoying logging outputs
- level HappyLEnd finished
- entities/switch.rb: Switch#switch: workaround for Procs with various arity
- entities/lift.rb: includes StaticObject
- viking.rb: added requirement of 'ladder.rb';
  Viking#transport_move: y isn't changed according to argument, but
  transporter's rect (it's a bit dirty, but works well);
  BASE_VELOCITY increased to 100px/s
- transporter.rb, transportable.rb: RD->RDoc; unregistering is now done by
  Transportable, not Transporter
  (I was - and I hope that successfully - trying to fix Lift...)