@@ -9,6 +9,9 @@
 - game.rb, gamestate.rb, bottompanel.rb, bpvikingview.rb: 
   F5 switches panel position in-game
 
+- bottompanel.rb, trash.rb: when an item is dropped into the trash,
+  symbol of recyclation rotates for a while
+
 [30.December 2008]
 - viking.rb: Viking standing on the top of a ladder is able to climb it down.
 - game.rb, bottompanel.rb, bpvikingview.rb, location.rb:
